...
                    {activeWallet instanceof NDKNWCWallet && <WalletNWC wallet={activeWallet} />}
                    {activeWallet instanceof NDKCashuWallet && <WalletNip60 wallet={activeWallet} />}
                </View>

                <View className="flex-row justify-stretch p-4 gap-14">
                    <Button variant="primary" className="grow items-center" onPress={deposit}>
                        <Text className="py-2 text-white font-medium">Receive</Text>
                    </Button>
                    <Button variant="primary" className="grow items-center">
                        <Text className="py-2 text-whitefont-medium">Send</Text>
                    </Button>
                </View>
            </View>
        </SafeAreaView>
    );
}
...
